Bring back the visibility CSS attribute to make sure the tooltip is not going to be visible even if the user zooms out

--- a/packages/component-library/src/components/plmg-tooltip/plmg-tooltip.scss
+++ b/packages/component-library/src/components/plmg-tooltip/plmg-tooltip.scss
@@ -74,6 +74,11 @@ $arrow-width: 6px;
   width: fit-content;
   max-width: 150px;
   overflow-wrap: break-word;
+  visibility: hidden;
+
+  &.visible {
+    visibility: visible;
+  }
 
   &.neutral {
     background-color: tokens.$plmg-color-background-neutral-dark;
